--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script src="templates/auth/authentification.js"></script>
   <script src="templates/admin/beranda/beranda.js"></script>
 
-  <script src="templates/admin/menuAdmin.js"></script>
+  <script src="templates/admin/menu.js"></script>
 
   <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
